--- a/css/styles.css
+++ b/css/styles.css
@@ -110,13 +110,7 @@ a.white {
 	color: #fff;
 }
 
-.testimonial-text {
-	font: italic 400 1rem/1.5rem "Open Sans", sans-serif;
-}
 
-.testimonial-author {
-	font: 700 1rem/1.5rem "Montserrat", sans-serif;
-}
 
 .btn-solid-reg {
 	display: inline-block;
@@ -625,7 +619,7 @@ input[type='checkbox'] {
 /*     03. Navigation     */
 /**************************/
 .navbar-custom {
-	background-color: #4633af;
+	background-color: #720026;
 	box-shadow: 0 0.0625rem 0.375rem 0 rgba(0, 0, 0, 0.1);
 	font: 700 0.75rem/2rem "Montserrat", sans-serif;
 	transition: all 0.2s;
@@ -748,8 +742,9 @@ input[type='checkbox'] {
 /*    04. Header     */
 /*********************/
 .header {
-	background: linear-gradient(to bottom right, rgba(72, 72, 212, 0), rgba(241, 104, 104, 0)), url('../images/header-background.jpg') center center no-repeat;
-	background-size: cover;
+	/*background: linear-gradient(to bottom right, rgba(72, 72, 212, 0), rgba(241, 104, 104, 0)), url('../images/header-background.jpg') center center no-repeat;
+	background-size: cover;*/
+	background-color: #72EFDD;
 }
 
 .header .header-content {
@@ -1295,7 +1290,7 @@ input[type='checkbox'] {
 .counter {
 	padding-top: 6.5rem;
 	padding-bottom: 5.375rem;
-	background-color: #262431;
+	background-color: #ffffff;
 	text-align: center;
 }
 
@@ -1360,7 +1355,7 @@ input[type='checkbox'] {
 /**********************/
 .footer {
 	padding-top: 5rem;
-	background-color: #262431;
+	background-color: #ffffff;
 }
 
 .footer .footer-col {
@@ -1543,6 +1538,7 @@ a:hover.back-to-top {
 		padding: 2.125rem 1.5rem 2.125rem 2rem;
 		box-shadow: none;
         background: transparent;
+
 	}
 	
 	.navbar-custom .navbar-brand.logo-text {
@@ -1566,7 +1562,7 @@ a:hover.back-to-top {
 	.navbar-custom.top-nav-collapse {
         padding: 0.5rem 1.5rem 0.5rem 2rem;
 		box-shadow: 0 0.0625rem 0.375rem 0 rgba(0, 0, 0, 0.1);
-		background-color: #4633af;
+		background-color: #5390D9!important;
 	}
 
 	.navbar-custom.top-nav-collapse .navbar-brand.logo-text {
