--- a/css/styles.css
+++ b/css/styles.css
@@ -78,12 +78,12 @@ h3 {
 }
 
 h4 {
-	color: #f1f1f8;
+	color: #33415C;
 	font: 700 1.375rem/1.75rem "Montserrat", sans-serif;
 }
 
 h5 {
-	color: #f1f1f8;
+	color: #33415C;
 	font: 700 1.125rem/1.625rem "Montserrat", sans-serif;
 }
 
@@ -655,64 +655,9 @@ input[type='checkbox'] {
 	color: #00c9db;
 }
 
-/* Dropdown Menu */
-.navbar-custom .dropdown:hover > .dropdown-menu {
-	display: block; /* this makes the dropdown menu stay open while hovering it */
-	min-width: auto;
-	animation: fadeDropdown 0.2s; /* required for the fade animation */
-}
 
-@keyframes fadeDropdown {
-    0% {
-        opacity: 0;
-    }
 
-    100% {
-        opacity: 1;
-    }
-}
 
-.navbar-custom .dropdown-toggle:focus { /* removes dropdown outline on focus  */
-	outline: 0;
-}
-
-.navbar-custom .dropdown-menu {
-	margin-top: 0;
-	border: none;
-	border-radius: 0.25rem;
-	background-color: #4633af;
-}
-
-.navbar-custom .dropdown-item {
-	color: #fff;
-	text-decoration: none;
-}
-
-.navbar-custom .dropdown-item:hover {
-	background-color: #4633af;
-}
-
-.navbar-custom .dropdown-item .item-text {
-	font: 700 0.75rem/1.5rem "Montserrat", sans-serif;
-}
-
-.navbar-custom .dropdown-item:hover .item-text {
-	color: #00c9db;
-}
-
-.navbar-custom .dropdown-items-divide-hr {
-	width: 100%;
-	height: 1px;
-	margin: 0.25rem auto 0.25rem auto;
-	border: none;
-	background-color: #b5bcc4;
-	opacity: 0.2;
-}
-/* end of dropdown menu */
-
-.navbar-custom .social-icons {
-	display: none;
-}
 
 .navbar-custom .navbar-toggler {
 	border: none;
@@ -744,7 +689,7 @@ input[type='checkbox'] {
 .header {
 	/*background: linear-gradient(to bottom right, rgba(72, 72, 212, 0), rgba(241, 104, 104, 0)), url('../images/header-background.jpg') center center no-repeat;
 	background-size: cover;*/
-	background-color: #72EFDD;
+	background-color: #001845;
 }
 
 .header .header-content {
@@ -1407,12 +1352,12 @@ input[type='checkbox'] {
 .copyright {
 	padding-top: 1rem;
 	padding-bottom: 0.5rem;
-	background-color: #262431;
+	background-color: #ffffff;
 	text-align: center;
 }
 
 .copyright .p-small {
-	color: #f1f1f8;
+	color: #000000;
 	opacity: 0.6;
 }
 
@@ -1562,7 +1507,7 @@ a:hover.back-to-top {
 	.navbar-custom.top-nav-collapse {
         padding: 0.5rem 1.5rem 0.5rem 2rem;
 		box-shadow: 0 0.0625rem 0.375rem 0 rgba(0, 0, 0, 0.1);
-		background-color: #5390D9!important;
+		background-color: #001233!important;
 	}
 
 	.navbar-custom.top-nav-collapse .navbar-brand.logo-text {
