--- a/css/styles.css
+++ b/css/styles.css
@@ -1265,9 +1265,9 @@ input[type='checkbox'] {
 /*     16. Contact     */
 /***********************/
 .form {
-	padding-top: 6.25rem;
-	padding-bottom: 5.625rem;
-	background: url('../images/contact-background.jpg') center bottom no-repeat;
+	padding-top: 4.0rem;
+	margin-bottom: 5.625rem;
+	background: #001845;
 	background-size: cover; 
 }
 
@@ -1389,8 +1389,9 @@ a:hover.back-to-top {
 /***************************/
 .ex-header {
 	padding-top: 8rem;
-	padding-bottom: 5rem;
-	background: linear-gradient(to bottom right, #2c1a7e, #5557db);
+	margin-bottom: 30px;
+	background: #0353A4;
+	background-size: cover; 
 	text-align: center;
 }
 
@@ -1545,97 +1546,6 @@ a:hover.back-to-top {
 	/* end of header */
 
 
-	/* Testimonials */
-	.slider-1 .swiper-button-prev {
-		left: 1rem;
-		width: 1.375rem;
-		background-size: 1.375rem 2.125rem;
-	}
-	
-	.slider-1 .swiper-button-next {
-		right: 1rem;
-		width: 1.375rem;
-		background-size: 1.375rem 2.125rem;
-	}
-	/* end of testimonials */
-
-
-	/* Features */
-	.tabs .card .card-icon {
-		width: 4.5rem;
-		height: 4.5rem;
-	}
-	
-	.tabs .card .card-icon .fas,
-	.tabs .card .card-icon .far {
-		font-size: 2.25rem;
-		line-height: 4.5rem;
-	}
-
-	.tabs #tab-1 .card.left-pane .text-wrapper {
-		width: 85%;
-	}
-
-	.tabs #tab-2 img {
-		margin-bottom: 0;
-	}
-
-	.tabs #tab-2 .text-area {
-		margin-top: 0;
-	}
-
-	.tabs #tab-2 .icon-cards-area .card {
-		display: inline-block;
-		width: 44%;
-		margin-right: 2.5rem;
-		vertical-align: top;
-	}
-
-	.tabs #tab-2 div.card:nth-child(2n+2) {
-		margin-right: 0;
-	}
-
-	.tabs #tab-3 .text-area {
-		margin-bottom: 0;
-	}
-
-	.tabs #tab-3 .icon-cards-area .card {
-		display: inline-block;
-		width: 44%;
-		margin-right: 2.5rem;
-		vertical-align: top;
-	}
-
-	.tabs #tab-3 div.card:nth-child(2n+2) {
-		margin-right: 0;
-	}
-
-	.tabs #tab-3 img {
-		margin-bottom: 0;
-	}
-	/* end of features */
-
-
-	/* Details Lightboxes */
-	.lightbox-basic {
-		padding: 3rem 3rem;
-	}
-	/* end of details lightboxes */
-
-
-	/* Screenshots */
-	.slider-2 .swiper-button-prev {
-		width: 1.375rem;
-		background-size: 1.375rem 2.125rem;
-	}
-	
-	.slider-2 .swiper-button-next {
-		width: 1.375rem;
-		background-size: 1.375rem 2.125rem;
-	}
-	/* end of screenshots */
-
-
 	/* Contact */
 	.form .list-unstyled li {
 		display: inline-block;
@@ -1713,8 +1623,8 @@ a:hover.back-to-top {
 
 	/* Header */
 	.header .header-content {
-		padding-top: 13rem;
-		padding-bottom: 10rem;
+		padding-top: 7rem;
+		padding-bottom: 5rem;
 		text-align: left;
 	}
 
@@ -1724,138 +1634,11 @@ a:hover.back-to-top {
 	/* end of header */
 
 
-	/* Features */
-	.tabs .card-body {
-		padding: 1rem 0 1.5rem 0;
-	}
-	
-	.tabs #tab-1 .card.left-pane {
-		text-align: right;
-	}
-
-	.tabs #tab-1 .card.left-pane .text-wrapper,
-	.tabs #tab-1 .card.right-pane .text-wrapper {
-		width: 68%;
-	}
-
-	.tabs #tab-1 .card.left-pane .card-icon {
-		float: none;
-		margin-right: 0;
-		margin-left: 1rem;
-	}
-
-	.tabs #tab-1 img {
-		margin-top: 0;
-		margin-bottom: 0;
-	}
-	
-	.tabs #tab-2 .icon-cards-area {
-		margin-top: 2.25rem;
-	}
-
-	.tabs #tab-2 .icon-cards-area .card {
-		width: 45%;
-		margin-right: 3.5rem;
-	}
-
-	.tabs #tab-2 .icon-cards-area .card p {
-		margin-bottom: 0.5rem;
-	}
-
-	.tabs #tab-3 .icon-cards-area .card {
-		width: 45%;
-		margin-right: 3.5rem;
-	}
-
-	.tabs #tab-3 .icon-cards-area .card p {
-		margin-bottom: 0.5rem;
-	}
-	/* end of features */
-
-
-	/* Video */
-	.basic-1 .image-container {
-		max-width: 53.125rem;
-		margin-right: auto;
-		margin-left: auto;
-	}
-	/* end of video */
-
-
-	/* Details 1 */
-	.basic-2 img {
-		margin-bottom: 0;
-	}
-
-	.basic-2 .text-container {
-		margin-top: 2.625rem;
-	}
-	/* end of details 1 */
-
-
-	/* Details 2 */
-	.basic-3 .text-container {
-		margin-top: 2.5rem;
-		margin-bottom: 0;
-	}
-	/* end of details 2 */
-
-
-	/* Details Lightboxes */
-	.lightbox-basic img {
-		margin-bottom: 0;
-		margin-left: 0;
-	}
-
-	.lightbox-basic h3 {
-		margin-top: 0.25rem;
-	}
-	/* end of details lightboxes */
-
-
-	/* Screenshots */
-	.slider-2 .swiper-container {
-		width: 92%;
-	}
-	/* end of screenshots */
-
-
-	/* Download */
-	.basic-4 {
-		padding-top: 6.75rem;
-	}
-
-	.basic-4 .text-container {
-		margin-top: 7rem;
-		margin-bottom: 0;
-		text-align: left;
-	}
-	/* end of download */
-
-
-	/* Statistics */
-	.counter {
-		padding-top: 6rem;
-		padding-bottom: 4.5rem;
-	}
-
-	.counter #counter .cell {
-		width: 8rem;
-		margin-right: 2.5rem;
-		margin-left: 2.5rem;
-	}
-	
-	.counter #counter .counter-value {
-		font: 700 4.25rem/4.5rem "Montserrat", sans-serif;	
-	}
-	/* end of statistics */
-
-
 	/* Extra Pages */
 	.ex-header h1 {
-		width: 80%;
 		margin-right: auto;
 		margin-left: auto;
+		
 	}
 
 	.ex-basic-2 {
