--- a/css/styles.css
+++ b/css/styles.css
@@ -110,7 +110,8 @@ a.white {
 	color: #fff;
 }
 
-
+.inline{
+}
 
 .btn-solid-reg {
 	display: inline-block;
@@ -619,7 +620,7 @@ input[type='checkbox'] {
 /*     03. Navigation     */
 /**************************/
 .navbar-custom {
-	background-color: #720026;
+	background-color: #001233;
 	box-shadow: 0 0.0625rem 0.375rem 0 rgba(0, 0, 0, 0.1);
 	font: 700 0.75rem/2rem "Montserrat", sans-serif;
 	transition: all 0.2s;
@@ -860,7 +861,7 @@ input[type='checkbox'] {
 
 .tabs .card .card-icon .fas,
 .tabs .card .card-icon .far {
-	color: #fff;
+	color: #000000;
 	font-size: 1.75rem;
 	line-height: 3.5rem;
 }
@@ -1391,7 +1392,7 @@ a:hover.back-to-top {
 	padding-top: 8rem;
 	margin-bottom: 30px;
 	background: #0353A4;
-	background-size: cover; 
+	
 	text-align: center;
 }
 
